--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
+    "axios": "^1.3.2",
+    "cheerio": "^1.0.0-rc.12",
+    "jest": "^27.5.1",
+    "jsdom": "^21.1.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
