--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,15 @@
     "cheerio": "^1.0.0-rc.12",
     "jest": "^27.5.1",
     "jsdom": "^21.1.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4",
-    "webcrypto-jwt": "^0.2.2"
+    "webcrypto-jwt": "^0.2.2",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
